# Windows-AI-Agent

./: .gitignore  AI_Models.txt  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  advanced_executor.cpp  advanced_executor.h  ai_model.cpp  ai_model.h  config_advanced.example.json  config_advanced.json  context_manager.cpp  context_manager.h  executor.cpp  executor.h  gemini.cpp  gemini.h  gemini_original.cpp  http_server.cpp  http_server.h  main.cpp  main_advanced.cpp  multimodal_handler.cpp  multimodal_handler.h  task_planner.cpp  task_planner.h  vcpkg.json  vcpkg.json.backup  vision_guided_executor.cpp  vision_guided_executor.h  vision_processor.cpp  vision_processor.h
frontend/: .gitignore  README.md  electron-builder.json  index.html  package.json  tsconfig.node.json  vite.config.js
frontend/electron/: main.js  preload.js
frontend/src/: AIAgentService.js  App.css  App.jsx  index.css
frontend/src/components/: ChatInterface.css  ChatInterface.jsx
scripts/: temp.ps1
